tow group in our teams opened A$N hackers

--- a/index.html
+++ b/index.html
@@ -468,10 +468,10 @@
               </div>
             </div>
 
-            <!-- <hr class="teamHr">
+            <hr class="teamHr">
 
                     <div class="team A$N">
-                        <img src="image/AN.jpg" alt="">
+                        <img src="image/teams/AN.jpg" alt="">
                         <div class="main-info">
                             <h2>A $ N</h2>
                             <div class="teamMates">
@@ -514,12 +514,12 @@
                                 </p>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
-            <!-- <hr class="teamHr">
+            <hr class="teamHr">
 
                     <div class="team hackers">
-                        <img src="image/hackers.jpg" alt="">
+                        <img src="image/teams/hackers.jpg" alt="">
                         <div class="main-info">
                             <h2>hackers</h2>
                             <div class="teamMates">
@@ -568,7 +568,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div> -->
+                    </div> 
 
             <!-- <hr class="teamHr">
 
