project links changed

--- a/persons/captains/abdullah morsy/Abdullah-morsy.html
+++ b/persons/captains/abdullah morsy/Abdullah-morsy.html
@@ -347,24 +347,24 @@
                             quae ratione maiores dolorem facilis, inventore ipsa vero vel quidem facere totam
                             nulla.</p>
                         <p class="our-projects"><span>Our Projects: </span>
-                            <a target="_blank" href="../../index.html">
+                            <a target="_blank" href="../../../index.html">
                                 Development Club Website</a>
                             <a target="_blank" href="https://github.com/Abdullah497dk/Development-Club">
                                 (Github)</a>,
 
-                            <a target="_blank" href="../../projects/adidas-website/index.html">
+                            <a target="_blank" href="../../../projects/abdullah-1-adidas-website/index.html">
                                 Adidas</a>
                             <a target="_blank" href="https://github.com/Abdullah497dk/adidas-website">
                                 (Github)</a>,
 
-                            <a target="_blank" href="../../projects/green-donation-website/index.html">
+                            <a target="_blank" href="../../../projects/meryem-1-green-donation-website/index.html">
                                 Green Donation</a>
                             <a target="_blank" href="https://github.com/Abdullah497dk/green-donation-website">
                                 (Github)</a>
                         </p>
                         <p class="our-projects"><span>Our Mini Projects: </span>
-                            <a target="_blank" href="../../projects/planets/index.html">
-                                Planets</a>
+                            <a target="_blank" href="../../../projects/mini-projects/abdullah-1-workers-card/index.html">
+                                login form</a>
                             <a target="_blank" href="https://github.com/Abdullah497dk/Planets-project">
                                 (Github)</a>
                         </p>
